train on whole data before predicting

--- a/pubclass.ipynb
+++ b/pubclass.ipynb
@@ -1345,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -1354,11 +1354,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Gynecology' 'Endocrinology' 'Dermatology' 'Dermatology']\n['Endocrinology' 'Endocrinology' 'Dermatology' 'Dermatology']\n"
+      "['Endocrinology' 'Endocrinology' 'Dermatology' 'Dermatology']\n['Endocrinology' 'Endocrinology' 'Dermatology' 'Dermatology']\n"
      ]
     }
    ],
    "source": [
+    "# Train with all data\n",
+    "dtm = vect.fit_transform(X)\n",
+    "lg = LogisticRegression()\n",
+    "lg.fit(dtm, y)\n",
+    "\n",
+    "nb = MultinomialNB()\n",
+    "nb.fit(dtm, y)\n",
+    "\n",
     "input = [\"The Developmental Origins of Health and Disease (DOHaD) paradigm is one of the most rapidly expanding areas of biomedical research. Environmental stressors that can impact on DOHaD encompass a variety of environmental and occupational hazards as well as deficiency and oversupply of nutrients and energy. They can disrupt early developmental processes and lead to increased susceptibility to disease/dysfunctions later in life. Presentations at the fourth Conference on Prenatal Programming and Toxicity in Boston, in October 2014, provided important insights and led to new recommendations for research and public health action. The conference highlighted vulnerable exposure windows that can occur as early as the preconception period and epigenetics as a major mechanism than can lead to disadvantageous “reprogramming” of the genome, thereby potentially resulting in transgenerational effects. Stem cells can also be targets of environmental stressors, thus paving another way for effects that may last a lifetime. Current testing paradigms do not allow proper characterization of risk factors and their interactions. Thus, relevant exposure levels and combinations for testing must be identified from human exposure situations and outcome assessments. Testing of potential underpinning mechanisms and biomarker development require laboratory animal models and in vitro approaches. Only few large-scale birth cohorts exist, and collaboration between birth cohorts on a global scale should be facilitated. DOHaD-based research has a crucial role in establishing factors leading to detrimental outcomes and developing early preventative/remediation strategies to combat these risks.\",\n",
     "         \"Rat anterior pituitary cells were placed in a superfusion column and were stimulated by rat hypothalamic extract. The rate of ACTH secretion was monitored by collecting fractions eluting from the column every 2 min. Dispersed rat adrenocortical cells were used to determine the amounts of ACTH in the superfusate. ACTH appeared in the medium 6–12 sec after stimulation of the cells. A linear log dose-response relationship existed between ⅓ to 1 rat hypothalamus extract and the amounts of ACTH released. Repeated pulses of CRF stimulation of the same column ofpituitary cells resulted in repeated, identical peaks of ACTH. Constant stimulation caused a plateau in hormone release that lasted as long as the stimulus was present. The stimulated, but not thebasal ACTH release, could be inhibited by superfusion with corticosterone in vitro (0.2 µg/ml), or by treating the pituitary donor animal in vivo with corticosterone (5 mg/100g BW), cortisol or dexamethasone. Adrenalectomy of the donor animal caused increases in the basal and the stimulated ACTH release.\",\n",
     "         \"Dermoscopy improves the diagnostic accuracy in the clinical evaluation of pigmented skin lesions, but it is also useful for the assessment of vascular structures that are not visible to the naked eye. As a consequence, dermoscopy has been employed more and more for the differential diagnosis of nonpigmented skin disorders, including tumors but also inflammatory and infectious diseases. This article provides a review of the dermoscopic features seen in various nonpigmented tumoral and nontumoral skin lesions as well as the dermoscopic criteria used for monitoring skin reactions to various treatments.\"\n",
