--- a/pubclass.ipynb
+++ b/pubclass.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
