changed model, started tuning, slowly improving data quality

--- a/multilabel.ipynb
+++ b/multilabel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -126,7 +126,7 @@
        "</div>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,14 +137,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(341,)\n(341, 3)\n"
+      "(375,)\n(375, 3)\n"
      ]
     }
    ],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -166,7 +166,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Acoustics' 'Aerospace Medicine' 'Allergy and Immunology' 'Anatomy'\n 'Anesthesiology' 'Biology' 'Biomedical Research' 'Biophysics'\n 'Biotechnology' 'Cardiology' 'Chemistry  Pharmaceutical'\n 'Chemistry  Physical' 'Chiropractic' 'Clinical Clerkship'\n 'Clinical Competence' 'Competency-Based Education' 'Computational Biology'\n 'Computer-Assisted Instruction' 'Crystallography' 'Curriculum'\n 'Dental Research' 'Dermatology' 'Drug Design' 'Ecology' 'Ecotoxicology'\n 'Education' 'Education  Medical' 'Education  Medical  Continuing'\n 'Education  Medical  Graduate' 'Education  Medical  Undergraduate'\n 'Education  Nursing' 'Education  Nursing  Continuing'\n 'Educational Measurement' 'Electrochemistry' 'Electronics'\n 'Electrophysiology' 'Emergency Medicine' 'Environmental Health'\n 'Environmental Microbiology' 'Epidemiology' 'Evidence-Based Dentistry'\n 'Evidence-Based Medicine' 'Evidence-Based Practice' 'Family Practice'\n 'Fiber Optic Technology' 'Food Microbiology' 'Forensic Pathology'\n 'Forensic Toxicology' 'Gastroenterology' 'Gene Ontology'\n 'General Practice' 'General Surgery' 'Genetic Counseling' 'Genetics'\n 'Genetics  Population' 'Genomics' 'Geography' 'Geriatric Nursing'\n 'Geriatrics' 'Global Health' 'Grounded Theory' 'Gynecology'\n 'Health Education' 'Health Occupations' 'Health Services Research'\n 'Hematology' 'Herbal Medicine' 'Histology' 'Immunochemistry'\n 'Immunohistochemistry' 'Internal Medicine' 'Internship and Residency'\n 'Mathematics' 'Medical Oncology' 'Medicine' 'Metabolomics' 'Microscopy'\n 'Midwifery' 'Models  Educational' 'Nanomedicine' 'Nanotechnology'\n 'Needs Assessment' 'Neonatology' 'Neuroendocrinology' 'Neurology'\n 'Neurosurgery' 'Nonlinear Dynamics' 'Nursing'\n 'Nursing Methodology Research' 'Nutrigenomics' 'Obstetrics'\n 'Operating Room Nursing' 'Optics and Photonics' 'Orthopedics'\n 'Otolaryngology' 'Outcome Assessment (Health Care)' 'Parasitology'\n 'Pathology' 'Pathology  Molecular' 'Patient Education as Topic'\n 'Patient Simulation' 'Pediatric Nursing' 'Pediatrics'\n 'Pharmacoepidemiology' 'Pharmacogenetics' 'Pharmacology  Clinical'\n 'Photochemistry' 'Phylogeography' 'Physical Education and Training'\n 'Physiology' 'Precision Medicine' 'Proteomics' 'Psychiatry'\n 'Public Health' 'Qualitative Research' 'Radiation Oncology' 'Radiology'\n 'Regenerative Medicine' 'Rehabilitation' 'Research' 'Research Design'\n 'Research Report' 'Rheology' 'Sanitation' 'Schools' 'Serology'\n 'Soil Microbiology' 'Specialization' 'Statistics as Topic'\n 'Synthetic Biology' 'Systems Integration' 'Teaching' 'Telemedicine'\n 'Thoracic Surgery' 'Toxicology' 'Ultrasonics' 'Universities'\n 'Water Microbiology']\n"
+      "['Acoustics' 'Aerospace Medicine' 'Allergy and Immunology' 'Anatomy'\n 'Anesthesiology' 'Biology' 'Biomedical Research' 'Biophysics'\n 'Biotechnology' 'Cardiology' 'Chemistry  Pharmaceutical'\n 'Chemistry  Physical' 'Chiropractic' 'Clinical Clerkship'\n 'Clinical Competence' 'Competency-Based Education' 'Computational Biology'\n 'Computer User Training' 'Computer-Assisted Instruction' 'Crystallography'\n 'Curriculum' 'Dental Research' 'Dermatology' 'Drug Design' 'Ecology'\n 'Ecotoxicology' 'Education' 'Education  Medical'\n 'Education  Medical  Continuing' 'Education  Medical  Graduate'\n 'Education  Medical  Undergraduate' 'Education  Nursing'\n 'Education  Nursing  Continuing' 'Educational Measurement'\n 'Electrochemistry' 'Electronics' 'Electrophysiology' 'Emergency Medicine'\n 'Environmental Health' 'Environmental Microbiology' 'Epidemiology'\n 'Evidence-Based Dentistry' 'Evidence-Based Medicine'\n 'Evidence-Based Practice' 'Family Practice' 'Fiber Optic Technology'\n 'Food Microbiology' 'Forensic Pathology' 'Forensic Toxicology'\n 'Gastroenterology' 'Gene Ontology' 'General Practice' 'General Surgery'\n 'Genetic Counseling' 'Genetics' 'Genetics  Microbial'\n 'Genetics  Population' 'Genomics' 'Geography' 'Geriatric Nursing'\n 'Geriatrics' 'Global Health' 'Grounded Theory' 'Gynecology'\n 'Health Education' 'Health Occupations' 'Health Services Research'\n 'Hematology' 'Herbal Medicine' 'Histology' 'Immunochemistry'\n 'Immunohistochemistry' 'Internal Medicine' 'Internship and Residency'\n 'Mathematics' 'Medical Oncology' 'Medicine' 'Metabolomics' 'Microscopy'\n 'Midwifery' 'Models  Educational' 'Molecular Biology' 'Nanomedicine'\n 'Nanotechnology' 'Needs Assessment' 'Neonatology' 'Neuroendocrinology'\n 'Neurology' 'Neurosurgery' 'Nonlinear Dynamics' 'Nursing'\n 'Nursing Methodology Research' 'Nutrigenomics' 'Obstetrics'\n 'Operating Room Nursing' 'Optics and Photonics' 'Orthopedics'\n 'Otolaryngology' 'Outcome Assessment (Health Care)' 'Parasitology'\n 'Pathology' 'Pathology  Molecular' 'Patient Education as Topic'\n 'Patient Simulation' 'Pediatric Nursing' 'Pediatrics'\n 'Pharmacoepidemiology' 'Pharmacogenetics' 'Pharmacology  Clinical'\n 'Photochemistry' 'Phylogeography' 'Physical Education and Training'\n 'Physiology' 'Precision Medicine' 'Proteomics' 'Psychiatry'\n 'Psychophysiology' 'Public Health' 'Qualitative Research'\n 'Radiation Oncology' 'Radiology' 'Regenerative Medicine' 'Rehabilitation'\n 'Reproductive Medicine' 'Research' 'Research Design' 'Research Report'\n 'Rheology' 'Sanitation' 'Schools' 'Serology' 'Soil Microbiology'\n 'Specialization' 'Statistics as Topic' 'Stroke Rehabilitation'\n 'Synthetic Biology' 'Systems Integration' 'Teaching' 'Telemedicine'\n 'Thoracic Surgery' 'Toxicology' 'Ultrasonics' 'Universities'\n 'Water Microbiology']\n"
      ]
     }
    ],
@@ -189,16 +189,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<341x8759 sparse matrix of type '<class 'numpy.int64'>'\n\twith 32155 stored elements in Compressed Sparse Row format>"
+       "<375x9268 sparse matrix of type '<class 'numpy.int64'>'\n\twith 35504 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,21 +213,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(306,)\n(35,)\n(306, 138)\n(35, 138)\n"
+      "(356,)\n(19,)\n(356, 144)\n(19, 144)\n"
      ]
     }
    ],
    "source": [
     "# Train Test Split\n",
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.1)\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.05)\n",
     "print(X_train.shape)\n",
     "print(X_test.shape)\n",
     "print(Y_train.shape)\n",
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -244,10 +244,10 @@
     {
      "data": {
       "text/plain": [
-       "<306x8188 sparse matrix of type '<class 'numpy.int64'>'\n\twith 28590 stored elements in Compressed Sparse Row format>"
+       "<356x8958 sparse matrix of type '<class 'numpy.int64'>'\n\twith 33645 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -269,28 +269,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "G:\\Users\\Av\\Miniconda3\\lib\\site-packages\\sklearn\\multiclass.py:76: UserWarning: Label not 25 is present in all training examples.\n  str(classes[c]))\nG:\\Users\\Av\\Miniconda3\\lib\\site-packages\\sklearn\\multiclass.py:76: UserWarning: Label not 31 is present in all training examples.\n  str(classes[c]))\n"
+      "G:\\Users\\Av\\Miniconda3\\lib\\site-packages\\sklearn\\multiclass.py:76: UserWarning: Label not 7 is present in all training examples.\n  str(classes[c]))\nG:\\Users\\Av\\Miniconda3\\lib\\site-packages\\sklearn\\multiclass.py:76: UserWarning: Label not 11 is present in all training examples.\n  str(classes[c]))\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "G:\\Users\\Av\\Miniconda3\\lib\\site-packages\\sklearn\\multiclass.py:76: UserWarning: Label not 49 is present in all training examples.\n  str(classes[c]))\n"
+      "G:\\Users\\Av\\Miniconda3\\lib\\site-packages\\sklearn\\multiclass.py:76: UserWarning: Label not 68 is present in all training examples.\n  str(classes[c]))\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "G:\\Users\\Av\\Miniconda3\\lib\\site-packages\\sklearn\\multiclass.py:76: UserWarning: Label not 72 is present in all training examples.\n  str(classes[c]))\n"
+      "G:\\Users\\Av\\Miniconda3\\lib\\site-packages\\sklearn\\multiclass.py:76: UserWarning: Label not 95 is present in all training examples.\n  str(classes[c]))\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "G:\\Users\\Av\\Miniconda3\\lib\\site-packages\\sklearn\\multiclass.py:76: UserWarning: Label not 133 is present in all training examples.\n  str(classes[c]))\n"
+      "G:\\Users\\Av\\Miniconda3\\lib\\site-packages\\sklearn\\multiclass.py:76: UserWarning: Label not 119 is present in all training examples.\n  str(classes[c]))\n"
      ]
     },
     {
@@ -314,30 +314,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0285714285714\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn import metrics\n",
     "score = metrics.accuracy_score(Y_test, Y_pred_class)\n",
     "print(score)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    ""
    ]
   },
   {
