--- a/tuning.ipynb
+++ b/tuning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,17 +61,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Train Test Split\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.1, random_state=5)"
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.25, random_state=3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,19 +81,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.288372093023\n"
+      "0.414469453376\n"
      ]
     }
    ],
    "source": [
-    "model = models.UniformOVA(c=1, t1=0.3, t2=0.1)\n",
+    "model = models.UniformOVA(c=1, t1=0.1, t2=0.1)\n",
     "model.fit(X_train_dtm, Y_train)\n",
     "Y_pred_class = model.predict(X_test_dtm)\n",
     "\n",
@@ -103,9 +103,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 33min 54s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=10, error_score='raise',\n       estimator=UniformOVA(c=1, null_dv=-99, t1=0, t2=0), fit_params={},\n       iid=True, n_jobs=1,\n       param_grid={'t1': array([ 0.1,  0.2,  0.3,  0.4,  0.5,  0.6,  0.7,  0.8,  0.9,  1. ]), 't2': array([ 0.1,  0.2,  0.3,  0.4,  0.5,  0.6,  0.7,  0.8,  0.9,  1. ])},\n       pre_dispatch='2*n_jobs', refit=True, return_train_score=True,\n       scoring='f1_samples', verbose=0)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
     "t1_range = np.arange(0.1, 1.1, 0.1)\n",
@@ -118,14 +136,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.362236823513\n{'t1': 0.30000000000000004, 't2': 0.10000000000000001}\n"
+      "0.443137131686\n{'t1': 0.10000000000000001, 't2': 0.10000000000000001}\n"
      ]
     }
    ],
@@ -137,10 +157,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     ""
